<resources>
    <string name="app_name">devoir4</string>
    <string name="b_guest">Continuer en tant qu\'invité</string>
    <string name="t_search">Commencer à rechercher tout de suite!</string>
    <string name="t_echoshop">Ecoshop</string>
    <string name="t_b_code_barre">Recherche par code-barres</string>
    <string name="t_input_mots_cles">Entrer des mots-clés</string>
    <string name="t_b_rechercher">Rechercher</string>
    <string name="t_b_favoris">Favoris</string>
    <string name="t_b_historique">Historique</string>
    <string name="t_b_panier">Panier</string>
    <string name="t_auth">Authentification</string>
    <string name="t_input_email">Adresse courriel</string>
    <string name="t_input_password">Mot de passe</string>
    <string name="t_b_connexion">Se connecter</string>
    <string name="t_b_oublie_password">Mot de passe oublié?</string>
    <string name="t_b_creer_compte">Créer un compte</string>
    <string name="t_favoris_nom">Honeycrisp Apple</string>
    <string name="t_b_signin">S\'authentifier</string>
    <string-array name="t_favoris_nom">
        <item>HoneyCrisp</item>
        <item>Gala</item>
        <item>Golden</item>
    </string-array>
    <string name="ecoshop">Ecoshop</string>
    <string name="oublie">Veuillez saisir votre adresse courriel et nous vous enverrons un lien pour réinitialiser votre mot de passe.</string>
    <string name="adresse_courriel">Adresse courriel</string>
    <string name="envoyer_le_courriel">Envoyer le courriel</string>
    <string name="nom">Nom</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmation">Confirmation du mot de passe</string>
    <string name="lire">j\'ai lu et accepté les conditions</string>
    <string name="sinscrire">S\'inscrire</string>
    <string name="nom_produit">Nom du produit</string>
    <string name="info_produit">Informations sur le produit</string>
    <string name="voir_alternatives">Voir alternatives</string>
    <string name="voir_plus">Voir plus</string>
    <string name="photo">Photo</string>
    <string name="langue_de_preference">Langue de préférence</string>
    <string name="changer_le_mot_de_passe">Changer le mot de passe</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="confirmation_modification_mdp">Confirmation</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="endroit_d_origine">Endroit d\'origine</string>
    <string-array name="langues">
        <item>Français</item>
        <item>English</item>
    </string-array>
    <string name="detail_supp">Détail supplémentaires sur l\'empreinte environnementale</string>
    <string name="description_manu">Description de la manufacture</string>
    <string name="historique">Historique</string>
    <string name="date">Date</string>
    <string name="emprunte">Emprunte</string>
    <string name="jj_mm_aaaa">jj/mm/aaaa</string>
    <string name="panier">Panier</string>
    <string name="nom_complet">Nom complet</string>
    <string name="modifier_le_profile">Modifier le profil</string>
    <string name="favoris">Favoris</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="mode_sombre">Mode sombre</string>
    <string name="voir_le_produit">Voir le produit</string>
    <string name="t_favoris">Favoris</string>
    <string-array name="dates">
        <item>05/06/2021</item>
        <item>05/06/2021</item>
        <item>05/06/2021</item>
        <item>05/06/2021</item>
        <item>05/06/2021</item>
        <item>05/06/2021</item>
        <item>05/06/2021</item>
        <item>05/06/2021</item>
        <item>05/06/2021</item>
        <item>05/06/2021</item>
    </string-array>
    <string-array name="noms_produit">
        <item>Produit 1</item>
        <item>Produit 2</item>
        <item>Produit 3</item>
        <item>Produit 4</item>
        <item>Produit 5</item>
        <item>Produit 6</item>
        <item>Produit 7</item>
        <item>Produit 8</item>
        <item>Produit 9</item>
        <item>Produit 10</item>
    </string-array>
    <string-array name="nom_pomme">
        <item>HoneyCrisp</item>
        <item>Spartan</item>
        <item>Gala</item>
        <item>Golden</item>
        <item>Granny Smith</item>
    </string-array>
    <string-array name="info_pomme">
        <item>Info 1</item>
        <item>Info 2</item>
        <item>Info 3</item>
        <item>Info 4</item>
        <item>Info 5</item>
    </string-array>
    <string name="popup">Un courriel vous a été envoyé</string>
    <string name="ok">Ok</string>
    <string name="honeycrisp">Honeycrisp</string>
    <string name="honeycrisp_info">Pomme super croquante et délicieuse!</string>
    <string name="ajouter_au_panier">Ajouter au panier</string>
    <string name="item_ajoute">L\'item à été ajouté à votre panier</string>
    <string name="il_n_y_a_pas_grand">Il n\'y a pas grand chose à dire de mauvais sur son empreinte environnementale. Elle ne prends pas trop de ressource pour se faire produire et est entièrement compostable.</string>
    <string name="aucune_information">Aucune information disponible sur la manufacture de cet article</string>
    <string name="qu_bec_canada">Lieu de production : Québec, Canada</string>
    <string-array name="nom_pomme_sans_honey">
        <item>Spartan</item>
        <item>Gala</item>
        <item>Golden</item>
        <item>Granny Smith</item>
    </string-array>
</resources>