<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/ic_ecoshop"
        android:layout_width="117dp"
        android:layout_height="100dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_shopping_basket" />

    <TextView
        android:id="@+id/t_echoshop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/font_families"
        android:text="@string/t_echoshop"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_ecoshop" />

    <TextView
        android:id="@+id/t_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/t_auth"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_echoshop" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/t_input_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_auth">

        <EditText
            android:id="@+id/t_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:ems="10"
            android:hint="@string/t_input_email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLength="30"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/t_input_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_input_email_layout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/t_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:ems="10"
            android:hint="@string/t_input_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="30"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/b_connexion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/t_b_connexion"
        app:backgroundTint="#818181"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_input_password_layout" />

    <Button
        android:id="@+id/b_oublie_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/t_b_oublie_password"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/b_creer_compte"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_connexion" />

    <Button
        android:id="@+id/b_creer_compte"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/t_b_creer_compte"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_connexion" />

</androidx.constraintlayout.widget.ConstraintLayout>