<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <ImageView
        android:id="@+id/b_profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/profil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_ecoshop"
        android:layout_width="117dp"
        android:layout_height="100dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_shopping_basket" />

    <TextView
        android:id="@+id/t_echoshop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/font_families"
        android:text="@string/t_echoshop"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_ecoshop" />

    <Button
        android:id="@+id/b_code_barre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/t_b_code_barre"
        app:backgroundTint="#000000"
        app:icon="@drawable/ic_camera"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_echoshop" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/t_input_mots_cles_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/b_code_barre"
        app:startIconDrawable="@drawable/ic_search"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/t_input_mots_cles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:ems="10"
            android:hint="@string/t_input_mots_cles"
            android:inputType="text"
            android:lines="1"
            android:maxLength="30"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/b_rechercher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/t_b_rechercher"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_input_mots_cles_layout" />

    <Button
        android:id="@+id/b_favoris"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/t_b_favoris"
        android:textColor="@android:color/black"
        app:backgroundTint="#FFFFFF"
        app:icon="@drawable/ic_favorite"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconTint="#000000"
        app:layout_constraintEnd_toStartOf="@+id/b_historique"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_rechercher" />

    <Button
        android:id="@+id/b_historique"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/t_b_historique"
        android:textColor="@android:color/black"
        app:backgroundTint="#FFFFFF"
        app:icon="@drawable/ic_history"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_rechercher" />

    <Button
        android:id="@+id/b_panier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/t_b_panier"
        android:textColor="@android:color/black"
        app:backgroundTint="#FFFFFF"
        app:icon="@drawable/ic_cart"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_favoris" />

</androidx.constraintlayout.widget.ConstraintLayout>